changes for cal

--- a/config copy.yaml
+++ b/config copy.yaml
@@ -8,7 +8,7 @@ equipment:
     address: USB0::0x2A8D::0x5101::MY58032659::0::INSTR
   schedule:
     # sample_interval: 0.4
-    schedule_csv: schedule_daq_cal.csv
+    schedule_csv: schedule_daq.csv
   settings:
     channels:
         - channel: "101:105"
@@ -65,29 +65,18 @@ equipment:
     mode: VISA
     address: ASRL3::INSTR
   schedule:
-    schedule_csv: schedule_pump_cal.csv
+    schedule_csv: schedule_pump.csv
   settings:
     max_current: 5
     max_voltage: 30
-# - name: keysight_e36155_heater
-#   class: psu_e36155
-#   type: PowerSupply
-#   connection:
-#     mode: VISA
-#     address: USB0::0x2A8D::0x5902::MY63000128::0::INSTR
-#   schedule:
-#     schedule_csv: schedule_heater.csv
-#   settings:
-#     max_current: 5
-#     max_voltage: 30
-- name: dd450_bath
-  class: bath_dd450
-  type: Bath
+- name: keysight_e36155_heater
+  class: psu_e36155
+  type: PowerSupply
   connection:
     mode: VISA
-    address: ASRL6::INSTR
+    address: USB0::0x2A8D::0x5902::MY63000128::0::INSTR
   schedule:
-    schedule_csv: schedule_bath_cal.csv
+    schedule_csv: schedule_heater.csv
   settings:
     max_current: 5
     max_voltage: 30
