--- a/config_cal.yaml
+++ b/config_cal.yaml
@@ -1,4 +1,4 @@
-overall_time_limit: 86400 # 24 hours in second
+overall_time_limit: 126400 # 24 hours in second
 equipment:
 - name: keysight_970A_daq
   class: daq_keysight #class file
@@ -8,7 +8,7 @@ equipment:
     address: USB0::0x2A8D::0x5101::MY58032659::0::INSTR
   schedule:
     # sample_interval: 0.4
-    schedule_csv: schedule_daq.csv
+    schedule_csv: schedule_daq_cal.csv
   settings:
     channels:
         - channel: "101:105"
@@ -65,18 +65,29 @@ equipment:
     mode: VISA
     address: ASRL3::INSTR
   schedule:
-    schedule_csv: schedule_pump.csv
+    schedule_csv: schedule_pump_cal.csv
   settings:
     max_current: 5
     max_voltage: 30
-- name: keysight_e36155_heater
-  class: psu_e36155
-  type: PowerSupply
+# - name: keysight_e36155_heater
+#   class: psu_e36155
+#   type: PowerSupply
+#   connection:
+#     mode: VISA
+#     address: USB0::0x2A8D::0x5902::MY63000128::0::INSTR
+#   schedule:
+#     schedule_csv: schedule_heater.csv
+#   settings:
+#     max_current: 5
+#     max_voltage: 30
+- name: dd450_bath
+  class: bath_dd450
+  type: Bath
   connection:
     mode: VISA
-    address: USB0::0x2A8D::0x5902::MY63000128::0::INSTR
+    address: ASRL6::INSTR
   schedule:
-    schedule_csv: schedule_heater.csv
+    schedule_csv: schedule_bath_cal.csv
   settings:
     max_current: 5
     max_voltage: 30
