--- a/config.yaml
+++ b/config.yaml
@@ -23,52 +23,17 @@ equipment:
           measurement: "FRES" #RES for 2-wire
           sensor_type: "100" #AUTO
           remark: "4-wire resistance"
-# - name: simulation daq
-#   class: daq_simu
-#   type: DAQ
-#   connection:
-#     mode: VISA
-#     address: GPIB0::23::INSTR
-#   schedule:
-#     sample_rate: 2
-#     # schedule_csv: data1.csv
-#   settings:
-#     channels:
-#         - channel: "201"
-#           measurement: "TEMP:TC"
-#           sensor_type: "K"
-#           remark: "TC K-type temperature"
-#         - channel: "202:203"
-#           measurement: "TEMP:TC"
-#           sensor_type: "T"
-#           remark: "TC T-type temperature"
-#         - channel: "204:205"
-#           measurement: "RES"
-#           sensor_type: "AUTO"
-#           remark: "resistance"
-# - name: simulation psu
-#   class: psu_simu
+# - name: korad_ka3005_pump
+#   class: psu_ka3005
 #   type: PowerSupply
 #   connection:
-#     mode: Modbus
-#     address: 192.168.1.100
-#     port: 502
+#     mode: VISA
+#     address: ASRL3::INSTR
 #   schedule:
-#     schedule_csv: data.csv
+#     schedule_csv: schedule_pump.csv
 #   settings:
 #     max_current: 5
 #     max_voltage: 30
-- name: korad_ka3005_pump
-  class: psu_ka3005
-  type: PowerSupply
-  connection:
-    mode: VISA
-    address: ASRL3::INSTR
-  schedule:
-    schedule_csv: schedule_pump.csv
-  settings:
-    max_current: 5
-    max_voltage: 30
 - name: keysight_e36155_heater
   class: psu_e36155
   type: PowerSupply
@@ -91,3 +56,20 @@ equipment:
 #   settings:
 #     max_current: 5
 #     max_voltage: 30
+- name: leadfluid_ct3000f
+  class: pump_ct3000f
+  type: pump
+  connection:
+    mode: MODBUS
+    address: COM10
+    framer: rtu
+    baudrate: 9600
+    parity: E
+    stopbits: 1
+    bytesize: 8
+    unit: 1
+  schedule:
+    schedule_csv: schedule_pump.csv
+  settings:
+    max_current: 5
+    max_voltage: 30
